# ACTUARIAL_RISK_MODEL

./: README.md  losses.inspect.json  losses.npy  pyproject.toml  requirements.in  requirements.txt
src/actuarial_risk_model/: cli.py  risk_model.py
src/actuarial_risk_model.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_risk_model.py
