[build-system]
requires = ["setuptools>=65"]
[project]
name = "actuarial_risk_model"
version = "0.1.0"
authors = [
    {name="Your Name", email="your@email.com"},
]
description = "Actuarial risk modeling toolkit"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "pip-tools>=7.0",
]
